<resources>
    <string name="app_name">KidsLearning</string>
    <string name="select">Select</string>
    <string name="presents">PRESENTS</string>
    <string name="ad_id">ca-app-pub-9399213409638993/5720031203</string>
    <string name="kids_learning">Kids Learning</string>
    <string name="from">From</string>
    <string name="share">Share</string>
    <string name="rate">Rate</string>
    <string name="let_us_learn">Let Us Learn!</string>
    <string name="hey_we_are_so_glad_you_are_loving_our_app_we_would_love_your_rating_so_it_can_help_others_make_a_great_choice">Hey! We are so glad you are loving our app. We would love your rating so it can help others make a great choice.</string>
    <string name="no_thanks">No, thanks</string>
    <string name="sure">Sure</string>
    <string name="mad">MAD</string>
    <string name="house">HOUSE</string>
    <array name="colors">
        <item>@color/red</item>
        <item>@color/pink</item>
        <item>@color/purple</item>
        <item>@color/indigo</item>
        <item>@color/blue</item>
        <item>@color/lightblue</item>
        <item>@color/cyan</item>
        <item>@color/teal</item>
        <item>@color/green</item>
        <item>@color/lime</item>
        <item>@color/yellow</item>
        <item>@color/amber</item>
        <item>@color/orange</item>
        <item>@color/brown</item>
        <item>@color/grey</item>
        <item>@color/black</item>
        <item>@color/white</item>
    </array>
    <array name="colorNames">
        <item>RED</item>
        <item>PINK</item>
        <item>PURPLE</item>
        <item>INDIGO</item>
        <item>BLUE</item>
        <item>SKY BLUE</item>
        <item>CYAN</item>
        <item>TEAL</item>
        <item>GREEN</item>
        <item>LIME</item>
        <item>YELLOW</item>
        <item>AMBER</item>
        <item>ORANGE</item>
        <item>BROWN</item>
        <item>GREY</item>
        <item>BLACK</item>
        <item>WHITE</item>
    </array>

</resources>
